crates/plotnik-lib/tests/04-emit/definitions/ref_atomic_child_impossible.txt
Q = (program (expression_statement (Impossible) @expr))
Impossible = (binary_expression right: (_) left: (_))
==== diagnostics ====
error: the grammar places `left:` before `right:` in `binary_expression`
 --> query.ptk:2:33
  |
2 | Impossible = (binary_expression right: (_) left: (_))
  |               ----------------- ^^^^^^^^^^ --------- `left:` must come before `right:`
  |               |
  |               inside `binary_expression`
  |
help: write `left:` before `right:`
